[gd_scene load_steps=5 format=3 uid="uid://cdpdx05q15fpl"]

[ext_resource type="Script" path="res://MainScreen/savehighscore.gd" id="1_bgyba"]
[ext_resource type="Texture2D" uid="uid://c25oocefyuowb" path="res://Stages/World/Background/Stars_back.png" id="2_qqtju"]
[ext_resource type="FontFile" uid="uid://movlob1f0cw3" path="res://MainScreen/Fonts/Squarea Regular.ttf" id="3_6osl0"]

[sub_resource type="FontVariation" id="FontVariation_sdg1i"]
base_font = ExtResource("3_6osl0")

[node name="savehighscorescene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = 6.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource("1_bgyba")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qqtju")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.5
offset_top = -61.0
offset_right = 174.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 60
alignment = 1

[node name="Highscore" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_sdg1i")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Write Your Name"

[node name="SaveHighscoreButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6osl0")
theme_override_font_sizes/font_size = 50
text = "Save Highscore"
flat = true

[node name="Nahhh" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6osl0")
theme_override_font_sizes/font_size = 50
text = "Nahhh"
flat = true

[connection signal="text_changed" from="CenterContainer/VBoxContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/SaveHighscoreButton" to="." method="_on_save_highscore_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Nahhh" to="." method="_on_nahhh_pressed"]
